# paparazzi

./: .gitignore  .gitmodules  .packages  .readthedocs.yaml  .travis.yml  AUTHORS  BUGS  CHANGELOG.md  CONTRIBUTING.md  Doxyfile  ENV  Makefile  Makefile.ac  Makefile.gen  Makefile.install  Makefile.lpctools  Makefile.pl  Makefile.sys  README  README.md  TODO  Vagrantfile  ardrone2.sdp  cc2500_notes  configure.py  create_module  diff.diff  files_changed  find_confs.py  fix_code_style.sh  get_pprzgcs.sh  githelper.sh  import.sh  index.html  install.py  install.sh  krooz.pnws  make-release-tarball.sh  max7456.c  paparazzi  (+18 more)
sw/: CMakeLists.txt  Makefile.ocaml  README
sw/aerocomm/: README.txt  aerocomm.ml  aerocomm_new.c  aerocomm_new.h  datalink.h  downlink.h  link.ml  main_ap.c
sw/airborne/: 3dmg.c  3dmg.h  6dof.h  AMI601.c  AMI601.h  Makefile  OSAMNav.c  OSAMNav.h  actuators.c  actuators.d  actuators.h  actuators_pwm_arch.d  adc.h  adc_ap.h  adc_arch.d  adc_fbw.h  adc_generic.c  adc_generic.h  agl_vfilter.c  agl_vfilter.h  ahrs.c  ahrs.d  ahrs_aligner.d  ahrs_comp_filter.c  ahrs_comp_filter.h  ahrs_int_cmpl_quat.d  ahrs_multitilt.h  ahrs_new.c  ahrs_new.h  ahrs_quat_fast_ekf.c  ahrs_quat_fast_ekf.h  airspeed.c  airspeed.h  airspeed_ets.c  airspeed_ets.h  airspeed_ets_o.c  airspeed_ets_o.h  alt_vfilter.c  alt_vfilter.h  anemotaxis.c  (+339 more)
sw/airborne/.dep/: actuators.o.d  adc.o.d  adc_arch.o.d  adc_lld.o.d  ahrs.o.d  ahrs_aligner.o.d  ahrs_int_cmpl_quat.o.d  autopilot.o.d  board.o.d  can.o.d  can_lld.o.d  chcond.o.d  chcore.o.d  chcore_v7m.o.d  chdebug.o.d  chdynamic.o.d  chevents.o.d  chheap.o.d  chlists.o.d  chmboxes.o.d  chmemcore.o.d  chmempools.o.d  chmsg.o.d  chmtx.o.d  chqueues.o.d  chregistry.o.d  chschd.o.d  chsem.o.d  chsys.o.d  chthreads.o.d  chvt.o.d  commands.o.d  common_flight_plan.o.d  crt0.o.d  datalink.o.d  downlink.o.d  electrical.o.d  evtimer.o.d  ext.o.d  ext_lld.o.d  (+70 more)
sw/airborne/arm-linux/: arm-linux_bootlog.txt
sw/airborne/arm7/: ADS8344.c  ADS8344.h  LPC2129-ROM.ld  LPC2138-ROM-bl.ld  LPC2148-ROM.ld  Makefile  actuators_buss_twi_blmc_hw.c  actuators_buss_twi_blmc_hw.h  adc.c  adc.h  adc_hw.c  adc_hw.h  armVIC.c  armVIC.h  baro_MS5534A.c  baro_MS5534A.h  booz_imu_hw.c  booz_imu_hw.h  booz_link_mcu_hw.c  booz_link_mcu_hw.h  booz_test_gyros.c  booz_test_micromag.c  booz_test_scp.c  config.h  config_classix.h  config_tiny.h  crt0.S  gps_crado.c  gps_crado.h  i2c_hw.c  i2c_hw.h  icp_scale.h  imu_v3_hw.c  imu_v3_hw.h  init_hw.h  int.h  interrupt_hw.h  led_hw.h  link_mcu_hw.h  low_level_hw.h  (+85 more)
sw/airborne/autopilot/: Makefile  ad7714.c  ad7714.h  adc.c  adc.h  ahrs.S  ahrs.c  ahrs.h  autopilot.h  cam.c  cam.h  datalink.c  datalink.h  downlink.h  estimator.c  estimator.h  gps.h  gps_sirf.c  gps_ubx.c  i2c.c  i2c.h  if_calib.c  if_calib.h  infrared.c  infrared.h  link_fbw.c  link_mcu.c  lls.c  lls.h  main.c  mainloop.c  modem.c  modem.h  nav.c  nav.h  pid.c  pid.h  sirf.h  spi.c  spi.h  (+18 more)
sw/airborne/avr/: adc_ap.c  adc_fbw.c  adc_hw.c  ant_h_bridge.h  ant_servo.c  ant_spi.c  ant_spi.h  ant_tracker.c  ant_tracker.h  ant_v2x.c  config_discboard.h  config_robostix.h  config_v1_2.h  config_v1_2_1.h  dc_mc_link.c  esc.c  gpio.h  i2c_ap.c  init_hw.h  int.h  interrupt_hw.h  (+41 more)
sw/cgi/: configuration.cgi  logs.cgi
sw/configurator/: Makefile  adc.ml  airframe.ml  attitude.ml  autopilot.ml  console.ml  console.mli  env.ml  env.mli  env_conf.ml  env_conf.mli  flasher.ml  flasher.mli  flightplan.ml  hardware.ml  infrared.ml  logalizer.ml  main.ml  medit.ml  monitor.ml  notebook.ml  notebook.mli  radio.ml  servos.ml  simulator.ml  tkXml.ml  tkXml.mli  tty.ml  tty.mli  upload.ml  varXml.ml  varXml.mli  welcome.ml
sw/ext/: Makefile  README  README.md  bebop.py  pprz_qt_link_libraries.cmake
sw/extras/: bootstrap_vm.sh  setup_git_aliases.sh
sw/in_progress/: pictuav.lua
sw/include/: message_pragmas.h  os_desktop_utils.h  pprz_algebra_f.h  pprz_version.h  std.h
sw/logalizer/: Makefile  README  ahrs2fg.c  ahrs_utils.h  ahrsview.c  ctrlstick.c  dialog.fig  dialog.m  disp3d.c  export.glade  export.ml  export.mli  ffjoystick.c  flight_gear.c  flight_gear.h  getopenlog  imuview.c  ivy_example.c  log2json.cpp  log_extract.py  log_file.ml  logplotter.cpp  logplotter.ml  logplotter.qrc  motor_bench.c  network.c  network.h  openlog2tlm.c  play-nox.ml  play.cpp  play.ml  play.qrc  play_core.ml  plot  plot.cgi  plot.ml  plot.pl  plot3dparse.c  plot_roll_loop.c  plotprofile.c  (+20 more)
sw/simulator/: CMakeLists.txt  Makefile  booz2_sim_main.c  booz_flight_model.c  booz_flight_model.h  booz_flight_model_params.h  booz_flight_model_utils.c  booz_flight_model_utils.h  booz_flightgear.c  booz_joystick.c  booz_joystick.h  booz_joystick_fake.h  booz_r250.c  booz_r250.h  booz_randlcg.h  booz_rc_sim.h  booz_sensors_model.c  booz_sensors_model.h  booz_sensors_model_accel.c  booz_sensors_model_baro.c  booz_sensors_model_gps.c  booz_sensors_model_gyro.c  booz_sensors_model_mag.c  booz_sensors_model_params.h  booz_sensors_model_params_booz2.h  booz_sensors_model_params_booz2_a1.h  booz_sensors_model_rangemeter.c  booz_sensors_model_utils.c  booz_sensors_model_utils.h  booz_wind_model.c  booz_wind_model.h  data.ml  data.mli  diffusion.ml  events.ml  fg.c  fg_environment.xml  flightModel.ml  flightModel.mli  flight_gear.h  (+73 more)
sw/supervision/: Makefile  paparazzi.pl  paparazzicenter.glade  paparazzicenter.ml  pc_aircraft.ml  pc_common.ml  pc_control_panel.ml
sw/tools/: Makefile  attitude_viz.py  extract_makefile.ml  find_free_msg_id.ml  find_vpaths.py  fp_lexer.mll  fp_parser.mly  fp_proc.ml  fp_proc.mli  fp_syntax.ml  fp_syntax.mli  gcs_launch.py  gen_abi.ml  gen_aircraft.ml  gen_airframe.ml  gen_autopilot.ml  gen_calib.ml  gen_common.ml  gen_common.mli  gen_conf_radio_control_ppm.ml  gen_control.ml  gen_control.out  gen_dl.ml  gen_flight_plan.ml  gen_messages.ml  gen_messages2.ml  gen_messages_xml.ml  gen_modules.ml  gen_mtk.ml  gen_periodic.ml  gen_radio.ml  gen_settings.ml  gen_sim_downlink.ml  gen_srtm.ml  gen_tuning.ml  gen_ubx.ml  gen_xsens.ml  gzclient_launcher.sh  gzserver_ros_launcher.sh  install.py  (+6 more)
(+12767 files in other folders)
