[package]
name = "demo_module"
version = "0.1.0"
authors = ["Michal Podhradsky <mpodhradsky@galois.com>"]
edition = "2018"

[lib]
name = "rust_module"
path = "src/lib.rs"
crate-type = ["staticlib"]

[features]
"use_std" = ["rust_alloc_sim"]
"not_std" = ["rust_alloc_chibios"]
default = []

[build-dependencies]
bindgen = "0.42.2"

[dependencies]

[dependencies.rust_alloc_chibios]
path = "../rust_alloc_chibios"
optional = true

[dependencies.rust_alloc_sim]
path = "../rust_alloc_sim"
optional = true